# pytest-mrt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  demo.tape  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: run_benchmarks.py
docs/: accuracy.md  api.md  benchmarks.md  best-practices.md  cli.md  contributing.md  faq.md  how-it-works.md  index.md  migration-guide.md  patterns.md  plugin-api.md  quickstart.md  roadmap.md  troubleshooting.md
examples/blog/: alembic.ini  conftest.py  test_migrations.py
examples/blog/alembic/: env.py
examples/blog/alembic/versions/: 001_create_users.py  002_create_posts.py  003_add_bio.py  004_drop_phone.py  005_irreversible_data_migration.py
examples/ci-integration/: github-actions.yml  gitlab-ci.yml  jenkins.groovy  pre-commit-hook.md
examples/django-app/: README.md
examples/django-app/myapp/migrations/: 0001_create_users.py  0002_add_profile.py  0003_risky_not_null.py  0004_run_sql_no_reverse.py
pytest_mrt/: __init__.py  cli.py  config.py  default_tests.py  django_testcase.py  exceptions.py  plugin.py  reporter.py
pytest_mrt/adapters/: django_detector.py  django_fixer.py  django_runner.py  django_verifier.py
pytest_mrt/commands/: check.py  clean_backups.py  drift_cmd.py  fix.py  init.py  output.py
pytest_mrt/core/: ast_analyzer.py  compat.py  detector.py  drift.py  fixer.py  graph.py  html_report.py  runner.py  schema.py  seeder.py  verifier.py
tests/: test_ast_analyzer.py  test_cli.py  test_compat.py  test_config.py  test_default_tests.py  test_detector.py  test_django_detector.py  test_django_dynamic.py  test_django_fixer.py  test_django_fixer_e2e.py  test_django_runner_unit.py  test_django_testcase.py  test_django_verifier_unit.py  test_drift.py  test_explain.py  test_false_positives.py  test_fixer.py  test_graph.py  test_html_report.py  test_integration.py  test_mssql.py  test_mysql.py  test_oracle.py  test_plugin.py  test_postgres.py  test_reporter.py  test_schema.py  test_seeder.py  test_verifier_unit.py
tests/django_app/: apps.py  models.py
tests/django_app/migrations/: 0001_initial.py  0002_widget_description.py
tests/django_bad_app/migrations/: 0001_noop_downgrade.py
tests/django_fixer_app/: models.py
tests/django_fixer_app/migrations/: 0001_initial.py  0002_remove_phone.py
