[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-mrt"
version = "0.1.0"
description = "Automatically verify your database migrations can be safely rolled back"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["pytest", "alembic", "migrations", "database", "testing", "rollback"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "pytest>=7.0",
    "alembic>=1.9",
    "sqlalchemy>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "psycopg2-binary",
    "hatch",
]

[project.entry-points."pytest11"]
mrt = "pytest_mrt.plugin"

[project.scripts]
mrt = "pytest_mrt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pytest_mrt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
