[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-mrt"
version = "0.2.1"
description = "Catch database migration rollback failures before they reach production"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "croc100" }]
keywords = [
    "pytest", "alembic", "migrations", "database",
    "testing", "rollback", "sqlalchemy",
]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "pytest>=7.0",
    "alembic>=1.9",
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/croc100/pytest-mrt"
Documentation = "https://croc100.github.io/pytest-mrt"
Repository = "https://github.com/croc100/pytest-mrt"
Issues = "https://github.com/croc100/pytest-mrt/issues"
Changelog = "https://github.com/croc100/pytest-mrt/releases"

[project.optional-dependencies]
dev = [
    "pytest",
    "psycopg2-binary",
    "hatch",
]
postgres = ["psycopg2-binary"]
asyncpg = ["asyncpg"]

[project.entry-points."pytest11"]
mrt = "pytest_mrt.plugin"

[project.scripts]
mrt = "pytest_mrt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pytest_mrt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
